@@ -45,6 +45,7 @@ NEW CHANGES:
              (+) remove rules-test.sh;
              (+) remove test-libudev-sym;
              (+) remove test-dhcp-option;
+             (+) remove test-dhcp-client;
         * units:
              (+) add sysctl service;
              (+) remove systemd-sysctl service;
